--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,20 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
-        "silverstripe/framework": "~3.2",
-        "silverstripe/cms": "~3.2",
-        "undefinedoffset/sortablegridfield": "^0.6.9",
-        "burnbright/silverstripe-importexport": "^0.3.1",
-        "tractorcow/silverstripe-colorpicker": "^3.0"
+        "php": ">=8.2",
+        "silverstripe/framework": "^5",
+        "silverstripe/cms": "^5",
+        "undefinedoffset/sortablegridfield": "^2",
+        "tractorcow/silverstripe-colorpicker": "^4"
     },
     "require-dev": {
-        "phpunit/phpunit": "~3.7",
+        "phpunit/phpunit": "^9",
         "squizlabs/php_codesniffer": "^3.0"
+    },
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true,
+            "silverstripe/vendor-plugin": true
+        }
     }
 }
