ss5 upgrade - change module type to shift install path into vendor

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "flashbackzoo/silverstripe-charts",
-    "type": "silverstripe-module",
+    "type": "silverstripe-vendormodule",
     "description": "Display your data using Chart.js",
     "license": "MIT",
     "keywords": ["SilverStripe", "Chart.js", "Graph"],
