ss5 upgrade - expose js

--- a/composer.json
+++ b/composer.json
@@ -34,5 +34,10 @@
             "composer/installers": true,
             "silverstripe/vendor-plugin": true
         }
-    }
+    },    
+	"extra": {
+		"expose": [
+			"static/js/dist"
+		]
+	}
 }
